[package]
name = "coordinates-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"
